--- a/register.html
+++ b/register.html
@@ -53,13 +53,13 @@
 								<ul>
                                 <li class="click_menu"><a href="#">My Account <i class="fa fa-angle-down"></i></a>
 										<ul class="click_menu_show">
-											<li><a href="customer-login.html">Compare Products</a></li>
+											<li><a href="shop.html">Compare Products</a></li>
 											<li><a href="customer-login.html">My Account</a></li>
 											<li><a href="wishlist.html">My Wish List</a></li>
 											<li><a href="customer-login.html">Sign In</a></li>
 										</ul>
 									</li>
-									<li><a href="customer-account.html">Create an Account</a></li>
+									<li><a href="register.html">Create an Account</a></li>
 								</ul>
 							</div>
 						</div>
@@ -95,31 +95,31 @@
 									<ul>
 										<li>
 											<div class="cart-img">
-												<a href="/html/product-details.html"><img src="img/crystal flower.jpeg" alt="" /></a>
+												<a href="img/product/Silver Fancy Oval Claw & Cluster Cubic Zirconia Ring.jpg"><img src="img/product/Silver Fancy Oval Claw & Cluster Cubic Zirconia Ring.jpg" alt="" /></a>
 											</div>
 											<div class="cart-content">
-												<h4><a href="/html/product-details.html">1 x crystal flower</a></h4>
-												<span><a href="/html/product-details.html">white diamond</a></span>
-												<span class="cart-price">R1000</span>
+												<h4><a href="/product-details.html">1 x Oval Silver Ring</a></h4>
+												<span><a href="/product-details.html">white diamond</a></span>
+												<span class="cart-price">R1573</span>
 											</div>
 											<div class="cart-del">
 												<i class="fa fa-times-circle"></i>
 											</div>											
 										</li>
 										<li>
-											<div class="cart-img">
-												<a href="/html/product-details.html"><img src="img/product/emerald ring.jpg" alt="" /></a>
+										<div class="cart-img">
+												<a href="product-details2.html"><img src="img/product/9ct Gold & Silver Diamond Tripset Wedding Ring.jpg" alt="" /></a>
 											</div>
 											<div class="cart-content">
-												<h4><a href="/html/product-details.html">1 x emerald ring</a></h4>
-												<span><a href="/html/product-details.html">dark emerald</a></span>
-												<span class="cart-price">R500</span>
+												<h4><a href="product-details3.html">1 x 9ct Gold and Silver Ring</a></h4>
+												<span><a href="product-details.html">Gold and Silver</a></span>
+												<span class="cart-price">R1500</span>
 											</div>
 											<div class="cart-del">
 												<i class="fa fa-times-circle"></i>
 											</div>											
 										</li>
-										<li class="total-price"><span> Total R1500 </span></li>
+										<li class="total-price"><span> Total R3073 </span></li>
 										<li class="checkout-bg">
 											<a href="checkout.html">checkout <i class="fa fa-angle-right"></i></a>
 										</li>
@@ -204,7 +204,7 @@
 											<li><a href="wishlist.html">my wishlist</a></li>
 											<li><a href="cart.html">cart page</a></li>
 											<li><a href="checkout.html">checkout</a></li>
-											<li><a href="/html/product-details.html">product-details</a></li>
+											<li><a href="/product-details.html">product-details</a></li>
 											<li><a href="user_accountpage.html">User account</a></li>
 											<li><a href="customer-login.html">login</a></li>
                                             <li><a href="register.html">Register</a></li>
@@ -302,7 +302,7 @@
 											<li><a href="wishlist.html">my wishlist</a></li>
 											<li><a href="cart.html">cart page</a></li>
 											<li><a href="checkout.html">checkout</a></li>
-											<li><a href="/html/product-details.html">product-details</a></li>
+											<li><a href="/product-details.html">product-details</a></li>
 											<li><a href="user_accountpage.html">User account</a></li>
 											<li><a href="customer-login.html">login</a></li>
                                             <li><a href="register.html">Register</a></li>
@@ -401,7 +401,8 @@
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-lg-offset-1 col-xs-12">
 						<div class="search-box">
-							<form action="#">
+							<div class="search-box">
+							<form action="https://formspree.io/f/xbjpnqjr" method="POST">
 								<input type="email" placeholder="Enter your email address"/>
 								<button><span class="lnr lnr-envelope"></span></button>
 							</form>
@@ -431,13 +432,7 @@
 <span>Email:</span> <a href="https://www.misscosmo43@gmail.com">misscosmo43@gmail.com</a>
 								</li>
 							</ul>
-							<ul class="footer-social">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#"><i class="fa fa-flickr"></i></a></li>
-							</ul>
+							
 						</div>
 					</div>
 					<div class="col-lg-2 col-md-3 hidden-sm col-xs-12 mar_b-30">
@@ -448,7 +443,7 @@
 							<ul class="usefull-link">
 								<li><a href="contact.html">Contact us</a></li>
 								<li><a href="contact.html">Site map</a></li>
-								<li><a href="#">About us</a></li>
+								
 								<li><a href="shop.html">Specials</a></li>
 								<li><a href="cart.html">My Cart</a></li>
 								<li><a href="wishlist.html">Wishlist</a></li>
