--- a/cart.html
+++ b/cart.html
@@ -129,6 +129,8 @@
 				</div>
 			</div>
 		</header>
+
+		<div id = "itemCart"></div>
 		<!-- header-end -->
 		<!-- mainmenu-area-start -->
 		<div class="mainmenu-area home-page-2 mainmenu-area-4" id="main_h">
