--- a/index.html
+++ b/index.html
@@ -659,16 +659,25 @@
 	<div class="static-slider-area dotted-style new-product-4 pb-80 hidden-xs">
 		<div class="static-slider-active">
 			<div class="static-single-slider">
-				<div class="static-slider-img"><img alt="" src="img/static/4.jpg"></div>
-				<div class="static-single-slider">
-					<div class="static-slider-img"><img alt="" src="img/static/5.jpg"></div>
+				<div class="static-slider-img">
+					<img src="img/static/4.jpg" alt="" />
 				</div>
-				<div class="static-single-slider">
-					<div class="static-slider-img"><img alt="" src="img/static/6.jpg"></div>
+			
+			</div>	
+			<div class="static-single-slider">
+				<div class="static-slider-img">
+					<img src="img/static/5.jpg" alt="" />
 				</div>
-			</div>
-		</div><!-- static-slider-area-end -->
-		<!-- feature-preduct-area-start -->
+			
+			</div>	
+			<div class="static-single-slider">
+				<div class="static-slider-img">
+					<img src="img/static/6.jpg" alt="" />
+				</div>
+				
+			</div>			
+		</div>
+	</div>
 		<div class="feature-preduct-area home-page-2 feature-product-4 dotted-5 new-product-4 hot-deal-area pb-50">
 			<div class="container">
 				<div class="row">
@@ -777,13 +786,19 @@
 								</div>
 								<p>We are a team of designers that create high quality gems, Everything your expect in precious jewelry..</p>
 								<ul>
-									<li><span>Address :</span> Cape Town South AFrica</li>
+									<li><span>Address :</span> Cape Town South Africa</li>
 									<li><span>Phone:</span> 074 292 6283</li>
 									<li>
 										<span>Email:</span> <a href="https://www.misscosmo43@gmail.com">misscosmo43@gmail.com</a>
 									</li>
 								</ul>
-							</div>
+								<ul class="footer-social">
+									<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="https://www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+								
+									</ul>
+								</div>
 						</div>
 						<div class="col-lg-2 col-md-3 hidden-sm col-xs-12 mar_b-30">
 							<div class="footer-wrapper">
